syntax = "proto3";

package invoicemgmt.v1;
import "google/protobuf/timestamp.proto";
import "invoicemgmt/v1/enums.proto";

option go_package = "github.com/manabie-com/backend/pkg/manabuf/invoicemgmt/v1;invoice_pb";

message BillingAddress {
  string billing_address_id = 1;
  string postal_code = 2;
  string prefecture = 3 [deprecated = true];
  string city = 4;
  string street1 = 5;
  string street2 = 6;
  string prefecture_id = 7 [deprecated = true];
  string prefecture_code = 8;
}

message BillingInformation {
  string student_payment_detail_id = 1;
  string payer_name = 2;
  string payer_phone_number = 3;
  BillingAddress billing_address = 4;
}

message BankAccountInformation {
  string bank_account_id = 1;
  string bank_id = 2;
  string bank_branch_id = 3;
  string bank_account_number = 4;
  string bank_account_holder = 5;
  BankAccountType bank_account_type = 6;
  bool is_verified = 7;
}

message UpsertStudentPaymentInfoRequest {
  string student_id = 1;
  BillingInformation billing_info = 2;
  BankAccountInformation bank_account_info = 3;
}

message UpsertStudentPaymentInfoResponse {
  bool successful = 1;
}

message UpdateStudentPaymentMethodRequest {
  string student_id = 1;
  string student_payment_detail_id = 2;
  PaymentMethod payment_method = 3;
}

message UpdateStudentPaymentMethodResponse {
  bool successful = 1;
}

service EditPaymentDetailService {
  rpc UpsertStudentPaymentInfo(UpsertStudentPaymentInfoRequest)
      returns (UpsertStudentPaymentInfoResponse);
  rpc UpdateStudentPaymentMethod(UpdateStudentPaymentMethodRequest)
      returns (UpdateStudentPaymentMethodResponse);
}